--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
 section {
   padding-top: 128px;
+  position: relative;
+}
+
+section::before {
+  z-index: -1;
+  content: "";
+  font-size: 72px;
+  color: grey;
+  opacity: 0.25;
+  position: absolute;
+  font-weight: 700;
+  top: 20px;
+  left: -30px;
 }
 .btn.button {
   border: 2px solid black;
   border-radius: 24px;
 }
-.btn.button:hover {
+.btn.button:hover,
+.btn.button.active {
   border: 2px solid black;
   color: white;
   background-color: black;
@@ -27,6 +41,20 @@ section {
 
 #arrow {
   animation: 2s upDown infinite;
+}
+
+.about::before {
+  content: "About";
+}
+
+.about-exp-item {
+  margin-top: 32px;
+}
+.about-exp-item-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 24px;
 }
 
 @keyframes upDown {
