--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ section {
   position: relative;
 }
 
+/* section#home {
+} */
+
 section::before {
   z-index: -1;
   content: "";
@@ -34,7 +37,9 @@ section::before {
 .home h3 {
   font-size: 48px;
 }
-
+.home img {
+  width: 100%;
+}
 .home .arrow img {
   width: 60px;
 }
@@ -128,6 +133,24 @@ section::before {
 }
 #inp_message {
   resize: none;
+}
+
+@media only screen and (max-width: 768px) {
+  section#home {
+    padding-top: 64px;
+  }
+  .home img {
+    width: 50%;
+  }
+  .contact-div {
+    padding-top: 32px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  section::before {
+    left: 0;
+    font-size: 64px;
+  }
 }
 
 @keyframes upDown {
